--- a/vanilla-widgets-implementation/game-of-life/styles.css
+++ b/vanilla-widgets-implementation/game-of-life/styles.css
@@ -1,7 +1,7 @@
 body {
-	font-family: sans-serif;
+	/* font-family: sans-serif;
 	font-size: 16px;
-	margin: 0px;
+	margin: 0px; */
 }
 
 #next-button {
